cmake_minimum_required(VERSION 3.20)
project(SeventhModule)

set(CMAKE_CXX_STANDARD 14)

add_executable(CuckooFor CuckooFor.cpp)
add_executable(SumOfNumbers SumOfNumbers.cpp)
add_executable(SumOfOddNumbers SumOfOddNumbers.cpp)
add_executable(MultiplicationTable MultiplicationTable.cpp)
add_executable(BotBossFor BotBossFor.cpp)
add_executable(PasswordFor PasswordFor.cpp)
add_executable(CheckASquareNumber CheckASquareNumber.cpp)
add_executable(GameBombFor GameBombFor.cpp)
add_executable(AlienFood AlienFood.cpp)
add_executable(CoffeeMachine CoffeeMachine.cpp)
add_executable(CoffeeMachinePro CoffeeMachinePro.cpp)
add_executable(MarsRover MarsRover.cpp)
add_executable(Biolaboratory Biolaboratory.cpp)